updating mobile styling to prevent overlap

--- a/components/sticky.css
+++ b/components/sticky.css
@@ -1,14 +1,4 @@
-/* @media screen and (min-width: 900px) {
-    #mobile {
-        display: none;
-    }
-}
 
-@media screen and (max-width: 900px) {
-    #desktop {
-        display: none;
-    }
-} */
 
 html,
 body {
@@ -26,15 +16,25 @@ body {
     font-family: "DM Mono", monospace;
 }
 
+.parent-container{
+    
+    @media screen and (max-width: 767px) {
+        display: flex;
+        flex-direction: column;
+        }
+}
+
 
 
 .left {
+    
     position: fixed;
     width: 30%;
     background-color: black;
     height: 100%;
     box-sizing: border-box;
     @media (max-width: 768px) {
+        flex: 1;
         width: 100%;
         position: static;
         display: flex;
@@ -115,11 +115,13 @@ body {
 }
 
 .right {
+    
     padding-top: 30px;
     float: right;
     width: 70%;
     background-color: black;
     @media (max-width: 768px) {
+        flex: 2;
         float: none;
         width: 100%;
         padding-top: 0px;
@@ -284,6 +286,7 @@ a.overlay {
         text-overflow: ellipsis;
         max-height: 0;
         transition: max-height 0.3s ease-in-out;
+        margin-bottom: 5px;
     }
 
     .work-content.visible {
